fixed text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,5 @@
 }
 
 .preview-card{
-        margin-right:0px;
+        margin-right:10px;
 }
